--- a/package.json
+++ b/package.json
@@ -1,50 +1,31 @@
 {
   "name": "hpca-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "expo": "^52.0.46",
-    "expo-status-bar": "^2.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.1.0",
-    "react-native": "^0.79.1",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-web": "^0.20.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "expo start",
+    "web": "expo start --web",
+    "android": "expo start --android",
+    "ios": "expo start --ios"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "expo": "~50.0.15",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.7",
+    "react-native-web": "~0.20.6",
+    "react-native-chart-kit": "^6.13.1",
+    "react-native-svg": "13.11.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.14.2",
+    "react-native-safe-area-context": "4.8.1",
+    "react-native-screens": "~3.25.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.7.2"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12"
-  }
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
