--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "web": "expo start --web",
-    "android": "expo start --android",
-    "ios": "expo start --ios"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.15",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^52.0.0",
+    "expo-status-bar": "~1.10.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.7",
-    "react-native-web": "~0.20.6",
-    "react-native-chart-kit": "^6.13.1",
-    "react-native-svg": "13.11.0",
+    "react-native": "0.73.0",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.14.2",
-    "react-native-safe-area-context": "4.8.1",
-    "react-native-screens": "~3.25.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.7.2"
+    "@react-navigation/native-stack": "^6.10.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "3.22.0",
+    "react-native-gesture-handler": "2.12.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.22.20",
+    "typescript": "^5.4.0",
+    "@types/react": "~18.3.12"
   },
   "private": true
 }
